# aiofase

./: pyproject.toml
aiofase/: microservice.py  server.py
examples/database/: database.py  sensor.py
